--- a/1st lesson/quize1.ipynb
+++ b/1st lesson/quize1.ipynb
@@ -1268,12 +1268,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The  highest average fuel cost per unit delivered is 1997\n"
+      "The year with the  highest average fuel cost per unit delivered is 1997\n"
      ]
     }
    ],
    "source": [
-    "print('The  highest average fuel cost per unit delivered is {}'.format(np.argmax(cost_per_year)))"
+    "print('The year with the highest average fuel cost per unit delivered is {}'.format(np.argmax(cost_per_year)))"
    ]
   },
   {
